# SFS

./: .env  .env.example  .gitignore  .pylintrc.txt  Makefile  README.md  docker help.txt  docker-compose.yml  fix.patch  mypy.ini  package-lock.json  package.json  pyproject.toml
.husky/: pre-commit
.ipynb_checkpoints/: docker-compose-checkpoint.yml
backend/api_gateway/: README.md
backend/domain/: __init__.py  models.py
backend/shared/: README.md  __init__.py  pyproject.toml
backend/shared/dto/: command_dto.py  command_status_dto.py  device_discovery_dto.py  health_status_dto.py  incident_dto.py  init.py  livestatus_dto.py  livestock_dto.py
backend/shared/enums/: command_status.py  device_role.py  incident_severity.py
backend/shared/ids/: base_id.py  device_id.py  incident_id.py  init.py  livestock_id.py
backend/shared/src/sfs_shared_kernel.egg-info/: PKG-INFO  SOURCES.txt
backend/shared/src/shared/dto/: command_dto.py  incident_dto.py  livestatus_dto.py  livestock_dto.py  telemetry_dto.py  telemetry_event_dto.py
backend/shared/src/shared/enums/: __init__.py  device_protocol.py  device_type.py  health_state.py  incident_status.py
backend/shared/src/shared/ids/: device_id.py  farm_id.py
backend/shared/src/shared/value_objects/: init.py
backend/shared/value_objects/: livestock_location.py
configs/global/: README.md
docs/: DDD_REDESIGN.md  README.md  REVIEW.md  STRUCTURE.md
docs/00_overview/: glossary.md  product_scope.md  roadmap.md  vision.md
infra/: .env.global  README.md  docker-compose.yml
infrastructure/: .env.example  README.md
(+778 files in other folders)
