[project]
name = "sfs"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

# -----------------------
# Ruff (lint + isort)
# -----------------------
[tool.ruff]
target-version = "py311"
line-length = 120

exclude = [
  ".venv",
  "venv",
  "__pycache__",
  "node_modules",
  "frontend",
  "backend/services/**/migrations",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "UP",  # pyupgrade
]
ignore = [
  "E203",
  "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
combine-as-imports = true

# -----------------------
# Pytest
# -----------------------
[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend"]

# -----------------------
# Mypy
# -----------------------
[tool.mypy]
python_version = "3.11"
mypy_path = "backend"
namespace_packages = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
