[project]
name = "sfs-shared-kernel"
version = "0.1.0"
description = "Shared kernel domain primitives for the SFS backend services."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["shared"]
